--- a/style.css
+++ b/style.css
@@ -19,6 +19,7 @@ padding-block: 2.4rem;
 background: var(--resultado-bg);
 text-align: center;
 color: var(--write);
+border-radius: 0 0 3.2rem 3.2rem;
 }
 .resultados h1{
     font-size: 1.8rem;
@@ -44,5 +45,14 @@ color: var(--write);
     line-height: 7.2rem;
 }
 .resultados div strong:nth-of-type(2){
+    color: var(--light-blue);
+}
+.resultados h2{
+    font-size: 2.4rem;
+    margin-bottom: 1rem;
+}
+.resultados p{
+    max-width: 26rem;
+    margin-inline: auto;
     color: var(--light-blue);
 }
