quinto creio eu

--- a/style.css
+++ b/style.css
@@ -10,6 +10,12 @@
     --media-bg: linear-gradient(180deg, #4d21c9 0%, rgba(37,33,201,0.00) 100%,  rgba(37,33,201,0.00) 100% ); 
     --write:#fff;
     --light-blue:#cac9ff;
+    --dark-navy: #303b59;
+    --resumo-div-bg: linear-gradient(0deg, rgba(255,255,255,0.95)0%, rgba(255,255,255,0.95)100%);
+    --reacao-bg:#ff5555;
+    --memoria-bg:#ffb21e;
+    --verbal-bg:#00bb8f;
+    --visual-bg:#1125d6;
 }
 body{
     font-size: 1.6rem;
@@ -55,4 +61,40 @@ border-radius: 0 0 3.2rem 3.2rem;
     max-width: 26rem;
     margin-inline: auto;
     color: var(--light-blue);
+}
+.resumo{
+    padding: 2.4rem 3.2rem;
+}
+.resumo h2{
+    color: var(--dark-navy);
+    font-size: 1.8rem;
+    margin-bottom: 2.5rem;
+}
+.resumo > div {
+    display: flex;
+    justify-content: space-between;
+    padding: 1.6rem;
+    border-radius: 1.2rem;
+    margin-bottom: 1.6rem;
+}
+.resumo > div div {
+    display: flex;
+    align-items: center;
+    gap:1.2rem;
+}
+.reação{
+    background: var(--reacao-bg)var(--resumo-div-bg);
+    color: var(--reacao-bg);
+}
+.memória{
+    background: var(--memoria-bg)var(--resumo-div-bg);
+    color: var(--memoria-bg);
+}
+.verbal{
+    background: var(--verbal-bg)var(--resumo-div-bg);
+    color: var(--verbal-bg);
+}
+.visual{
+    background: var(--visual-bg)var(--resumo-div-bg);
+    color: var(--visual-bg);
 }
