espero que esteja acabando

--- a/style.css
+++ b/style.css
@@ -82,6 +82,12 @@ border-radius: 0 0 3.2rem 3.2rem;
     align-items: center;
     gap:1.2rem;
 }
+.resumo > div strong{
+    color: var(--dark-navy);
+}
+.resumo > div strong span{
+    opacity: 0.5;
+}
 .reação{
     background: var(--reacao-bg)var(--resumo-div-bg);
     color: var(--reacao-bg);
@@ -97,4 +103,15 @@ border-radius: 0 0 3.2rem 3.2rem;
 .visual{
     background: var(--visual-bg)var(--resumo-div-bg);
     color: var(--visual-bg);
+}
+.resumo button{
+    margin-top: 0.8rem;
+    width: 100%;
+    border: none;
+    background: var(--dark-navy);
+    color: var(--write);
+    padding-block: 1.6rem;
+    border-radius: 12.8rem;
+    font-size: 1.8rem;
+    font-weight: 700;
 }
