--- a/style.css
+++ b/style.css
@@ -16,9 +16,11 @@
     --memoria-bg:#ffb21e;
     --verbal-bg:#00bb8f;
     --visual-bg:#1125d6;
+    --very-blue:#ecf2ff;
 }
 body{
     font-size: 1.6rem;
+    background: var(--very-blue);
 }
 .resultados{
 padding-block: 2.4rem;
@@ -64,6 +66,7 @@ border-radius: 0 0 3.2rem 3.2rem;
 }
 .resumo{
     padding: 2.4rem 3.2rem;
+    background: var(--write);
 }
 .resumo h2{
     color: var(--dark-navy);
@@ -114,4 +117,54 @@ border-radius: 0 0 3.2rem 3.2rem;
     border-radius: 12.8rem;
     font-size: 1.8rem;
     font-weight: 700;
+}
+@media (min-width:736px){
+   
+    body{
+        min-height: 100svh;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
+   
+    main {
+        display: grid;
+        grid-template-columns: 1fr 1fr;
+        width: 736px;
+        background: var(--write);
+        border-radius: 3.2rem 0 0 3.2rem;
+    }
+    .resultados{
+        padding-block: 3.8rem;
+        border-radius: 3.2rem;
+    }
+    .resultados h1{
+        font-size: 2.4rem;
+        margin-bottom: 3.6rem;
+    }
+    .resultados div {
+        width: 20rem;
+        height: 20rem;
+        margin-bottom: 2.8rem;
+    }
+    .resultados div strong:nth-of-type(1){
+        font-size: 7.2;
+    }
+    .resultados div strong:nth-of-type(2){
+        font-size: 1.8rem;
+    }
+    .resultados h2{
+        font-size: 3.2rem;
+        margin-bottom: 1.8rem;
+    }
+    .resultados p{
+        font-size: 1.8rem;
+    }
+    .resumo{
+        padding: 3.8rem 4rem;
+    }
+    .resumo h2{
+font-size: 2.4rem;
+margin-bottom: 3rem;
+    }
 }
